apps/adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: apps
  labels:
    app: adguard
    app.kubernetes.io/name: adguard
    app.kubernetes.io/instance: adguard
    app.kubernetes.io/component: dns
    app.kubernetes.io/part-of: apps
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    matchLabels:
      app: adguard
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      annotations:
        macbytes.io/pvc-resize: "adguard-pvc-20Gi"
      labels:
        app: adguard
        app.kubernetes.io/name: adguard
        app.kubernetes.io/instance: adguard
        app.kubernetes.io/component: dns
        app.kubernetes.io/part-of: apps
        app.kubernetes.io/managed-by: kustomize
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      containers:
        - name: adguard
          image: adguard/adguardhome:v0.107.79 # {"$imagepolicy": "flux-system:adguardhome-image-policy"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8053
              protocol: UDP
            - containerPort: 8053
              protocol: TCP
            - containerPort: 9853
              protocol: UDP
            - containerPort: 9853
              protocol: TCP
            - containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: adguard-data
              mountPath: /opt/adguardhome/conf
            - name: adguard-data
              mountPath: /opt/adguardhome/work
            - name: adguard-tls
              mountPath: /opt/adguardhome/tls
              readOnly: true
          resources:
            requests:
              memory: "512Mi"
              cpu: "50m"
            limits:
              memory: "2Gi"
              cpu: "500m"
      volumes:
        - name: adguard-data
          persistentVolumeClaim:
            claimName: adguard-pvc
        - name: adguard-tls
          secret:
            secretName: adguard-tls-certificate
