apps/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-svc
  namespace: apps
  labels:
    app: adguard
  annotations:
    io.cilium/lb-ipam-ips: "192.168.3.10,2603:6010:ce00:1197::3:10"
spec:
  type: LoadBalancer
  ipFamilyPolicy: PreferDualStack
  ipFamilies:
    - IPv4
    - IPv6
  selector:
    app: adguard
  ports:
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: web
      protocol: TCP
      port: 3000
      targetPort: 3000
